# sdlsnake

./: .gitignore  CMakeLists.txt  README.md  a.out
src/: main.cpp  snake.cpp  snake.hpp
